2006-02-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-internal-viewer.c:
        i18n

2006-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.c:
	* data/gnome-commander.1:
        Renamed options for start {left,right} pane dir

2006-02-13  Magnus Stålnacke  <jemamo@telia.com>

	* doc/create_archive.png:
	* doc/extract_archive.png:
        Updated doc files

2006-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* Makefile.am:
	* data/gnome-commander.desktop.in.in:
	* data/gnome-commander.ebuild:
	* data/gnome-commander.spec.in:
	* data/Makefile.am:
        Added ebuild file for gentoo systems
        Moved gnome-commander.{desktop.in,spec}.in to data/

2006-02-11  Assaf Gordon  <agordon88@gmail.com>

	* doc/gnome-commander.1:
	* doc/Makefile.am:
	* gnome-commander.spec.in:
        Added general man pages on gnome-commander

2006-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
        Version bumped to 1.2.0-pre

	* configure.in:
	* Makefile.am:
	* gnome-commander-desktop.in.in:
	* gnome-commander.spec.in:
	* po/POTFILES.in:
	* pixmaps/Makefile.am:
        Fixed problem with the lack of gnome menu entry

	* Makefile.am:
        Removed dependency on mkinstalldirs

2006-02-12  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* gnome-commander.spec.in:
        Changed required gtk+ version to 2.6.0 or more

2006-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-data.c:
        Changed default viewer and editor: emacs -> gedit 

	* gnome-commander.spec.in:
        Changed default tarball ext to bz2

2006-02-11  Assaf Gordon  <agordon88@gmail.com>

	* pixmap/{flip,rotate}-*.xpm:
	* src/gnome-cmd-internal-viewer.c:
	Made internal viewer menu consistent with 'Eye of GNOME'

2006-02-09  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-options-dialog.c:
	Added option for enabling/disabling 'Internal Viewer'

2006-02-08  Piotr Eljasiak  <epiotr@use.pl>
