@@ -60,6 +60,7 @@ typedef enum
 {
 	GNOME_CMD_COLOR_NONE,
 	GNOME_CMD_COLOR_MODERN,
+	GNOME_CMD_COLOR_FUSION,
 	GNOME_CMD_COLOR_CLASSIC,
 	GNOME_CMD_COLOR_CUSTOM,
 	GNOME_CMD_NUM_COLOR_MODES
